Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -21,10 +21,21 @@
         <td>8622698</td>
         </tr>
         <tr>
-          
+          <td>Los Angeles</td>
+          <td>California</td>
+          <td>399759</td>
         </tr>
-      </tr>
-    </tr>
+        <tr>
+          <td>Chicago</td>
+          <td>lllinois</td>
+          <td>2716450</td>
+        </tr>
+        <tr>
+          <td>Houston</td>
+          <td>Texas</td>
+          <td>2312717</td>
+        </tr>
+      
   </table>
   
 </body>
